# skyfall

./: .gitignore  API.md  CLAUDE.md  README.md  pyproject.toml  servertypes.json  skyfall.bat  skyfall.py  skyfall.spec  test.bat  version_info.txt
libs/wizwalker/: README.md  pyproject.toml
libs/wizwalker/examples/: check_group_quest.py  fight_lost_soul.py  read_deck.py  read_trade_window.py
libs/wizwalker/wizwalker/: __main__.py  client.py  mouse_handler.py  utils.py
libs/wizwalker/wizwalker/combat/: card.py  handler.py  member.py
libs/wizwalker/wizwalker/extensions/: __init__.py
libs/wizwalker/wizwalker/extensions/scripting/: deck_builder.py  utils.py
libs/wizwalker/wizwalker/file_readers/: cache_handler.py  nif.py  wad.py
libs/wizwalker/wizwalker/memory/: combat_actions.py  handler.py  hooks.py  instance_finder.py  memory_object.py  memory_reader.py
libs/wizwalker/wizwalker/memory/memory_objects/: __init__.py  actor_body.py  adventure_party_entry_info.py  adventure_party_info.py  adventure_party_join_info.py  adventure_party_join_list.py  adventure_party_list.py  behavior_instance.py  behavior_template.py  camera_controller.py  character_registry.py  client_duel_manager.py  client_object.py  combat_action.py  combat_participant.py  conditionals.py  core_object.py  deck_behavior.py  duel.py  enums.py  equipment_behavior.py  equipped_item_info.py  fish.py  game_client.py  game_object_template.py  game_stats.py  goal_data.py  inventory_behavior.py  madlib_arg.py  madlib_block.py  pip_count.py  quest_client_manager.py  quest_data.py  scene_manager.py  social_systems_manager.py  spell.py  spell_effect.py  spell_rank.py  spell_template.py  spellbook_behavior.py  (+4 more)
locale/: en.lang
scripts/: prepare_release.py
src/: deck.py  (+20 more)
(+79 files in other folders)
